--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "src",
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
+    "jsx": "react-jsx",
 	"strictNullChecks": true,
     "lib": [
       "DOM",
@@ -20,5 +21,5 @@
   },
   "include": [
     "**/*.ts"
-  ]
+, "src/views/*", "src/views/components/Icon.tsx"],
 }
